# elenchos

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml.example  pyproject.toml
.cursor/rules/: project.mdc
docs/: compare-baseline-plan.md  design.md  dev-plan.md  fe-design.md  fe-dev-plan.md  lm-studio-api.md
prompts/: sample.jsonl
src/elenchos/: __init__.py  baseline.py  cli.py  client.py  compare.py  config.py  console.py  legacy_runner.py  metrics.py  models.py  reporter.py  runner.py  storage.py
src/elenchos/benchmarks/: __init__.py  registry.py  schema.py
src/elenchos/providers/: __init__.py  base.py  openai_compat.py  registry.py
src/elenchos/scoring/: __init__.py  code_exec.py  deterministic.py  judge.py
src/elenchos/web/: __init__.py  app.py  deps.py  jobs.py  schemas.py  static_files.py
src/lmbench/: __init__.py  cli.py  client.py  config.py  metrics.py  models.py  runner.py
tests/: conftest.py  test_baseline.py  test_benchmarks.py  test_cli_bench.py  test_cli_runs.py  test_code_exec.py  test_compare.py  test_config.py  test_integration.py  test_judge.py  test_load_prompts.py  test_metrics.py  test_model_id.py  test_providers.py  test_reporter.py  test_runner.py  test_scoring.py  test_smoke.py  test_storage.py  test_web_api.py  test_web_health.py  test_web_static.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: BaselineComparison.css  BaselineComparison.tsx  BaselineScoreBadge.css  BaselineScoreBadge.tsx  CompareProgress.tsx  FaIcon.tsx  Layout.css  Layout.tsx  ProviderHealth.css  ProviderHealth.tsx  ProviderModelSelect.css  ProviderModelSelect.tsx  ResultsTable.css  ResultsTable.tsx  RunDurationCell.tsx  RunLauncher.css  RunLauncher.test.tsx  RunLauncher.tsx  RunPicker.css  RunPicker.tsx  RunProgress.css  RunProgress.tsx  RunTableProgressCell.css  RunTableProgressCell.test.tsx  RunTableProgressCell.tsx  ScoreBadge.css  ScoreBadge.tsx  SuiteCard.css  SuiteCard.tsx  SuiteTaskPanel.css  SuiteTaskPanel.tsx  TaskOutputPanel.css  TaskOutputPanel.tsx
web/src/hooks/: useJobStream.test.tsx  useJobStream.ts  useLocalStorageState.test.ts  useLocalStorageState.ts
web/src/lib/: defaults.ts  format.ts  jobStatusLabel.ts  modelOutput.test.ts  modelOutput.ts  runSummary.ts  runs.test.ts  runs.ts
web/src/pages/: BenchmarkDetailPage.test.tsx  BenchmarkDetailPage.tsx  BenchmarksPage.tsx  ComparePage.css  ComparePage.tsx  ComparisonDetailPage.tsx  (+12 more)
(+8 files in other folders)
