[project]
name = "elenchos"
version = "0.1.0"
description = "CLI for assessing and comparing LLM performance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "openai>=1.68.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "pyyaml>=6.0.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[project.scripts]
elenchos = "elenchos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elenchos"]

[tool.hatch.build.targets.wheel.force-include]
"src/elenchos/benchmarks/builtin" = "elenchos/benchmarks/builtin"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live provider (e.g. Ollama)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
